# agenda_maker

./: .env  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  README.rst  compose.yml  pyproject.toml  requirements.txt  temp.py  temp2.py
agenda_maker/: __init__.py  app.py  cli.py  main.py
agenda_maker/agenda_logic/: agenda.py  allocate_speaker_logic.py  get_result_logic.py  make_agenda_logic.py  preprocess.py  segmentate.py  segmentation.py  summarize.py  transcript.py
agenda_maker/app/: common.py  input.py
agenda_maker/app/pages/: config_page.py
agenda_maker/common/: __init__.py  config_manager.py  log_handler.py  make_zip.py  release_gpu_memory.py  script_run_kill.py
agenda_maker/config/: config.yaml
agenda_maker/data/: io.py
agenda_maker/data_object/: result_annotation.py  result_transcription.py  schema.py
agenda_maker/model/: __init__.py  base_model.py  get_model_class.py
agenda_maker/model/annotation/: model_pyaudio.py
agenda_maker/model/segmentation/: __init__.py  model_bert.py  model_semantic_text_segmentation.py  model_text_tilling.py  semantic_segmentation.py  text_tiling.py
agenda_maker/model/summarization/: __init__.py  elyza.py  model_pegasus.py  model_pegasus_x.py  prompt.py
agenda_maker/model/transcription/: __init__.py  model_whisper.py  whisperx.py
agenda_maker/model/translation/: model_marian_mt.py
dash_server/: app.py
dash_server/asset/: style.py
dash_server/pages/: common.py  home.py  make_agenda.py
doc/: app.md  config.md
