[tool.poetry]
name = "agenda-maker"
version = "0.2.1"
description = "Make Japanese Agenda"
readme = "README.md"
authors = ["jumtra"]
homepage = "https://github.com/jumtra"
repository = "https://github.com/jumtra/agenda_maker"
include = ["CHANGELOG.md"]
license='MIT License'
packages = [{include = "agenda_maker"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    'Programming Language :: Python :: 3',
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
huggingface = "^0.0.1"
numpy = "*"
pandas = "^1.5.2"
omegaconf = "^2.2.3"
transformers = ">=4.19.0,<=4.25.1"
sentence-transformers = ">=2.1.0,<=2.2.2"
ffmpeg-python = "^0.2.0"
pydub = "^0.25.1"
whisper-openai = "1.0.0"
sentencepiece = "^0.1.97"
spacy = {extras = ["cuda113"], version = "^3.4.4"}
ginza = "^5.1.2"
ja-ginza = "^5.1.2"
ja-ginza-electra = "^5.1.2"
setuptools = "^66.0.0"
wheel = "^0.38.4"
pyannote-audio = "^2.1.1"
pandera = "^0.14.2"
numba = "^0.56.4"

[tool.poetry.scripts]
agenda = "agenda_maker.cli:main"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


